--- a/sass/content.scss
+++ b/sass/content.scss
@@ -32,6 +32,7 @@ body {
   display: inline-block ;
   width: 80px ;
   text-shadow: 1px 1px rgba(255,255,255,0.3) ;
+  outline: none ;
 }
 
 #buttonFormatted {
