--- a/src/sass/content.scss
+++ b/src/sass/content.scss
@@ -1,235 +1,224 @@
-/*@charset "utf-8";*/
-
 body {
-  -webkit-user-select: text ;
-  overflow-y: scroll !important ;
-  margin: 0 ;
-  position: relative ;
+  font-size: 16px;
+  user-select: text;
+  overflow-y: scroll !important;
+  margin: 0;
+  position: relative;
 }
 
-#optionBar {
-  -webkit-user-select: none ;
-  display: block ;
-  position: absolute ;
-  top: 9px ;
-  right: 17px ;
+#formatOptionBar {
+  right: 0.7rem;
 }
 
-#buttonFormatted, #buttonPlain {
-  -webkit-border-radius: 2px;
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.1);
-  -webkit-user-select: none;
-  background: -webkit-linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
-  border: 1px solid #aaa;
-  color: #444;
-  font-size: 12px ;
-  margin-bottom: 0px;
-  min-width: 4em;
-  /*padding: 3px 12px 3px 12px;*/
-  padding: 3px 0 ;
-  position: relative ;
-  z-index: 10;
-  display: inline-block ;
-  width: 80px ;
-  text-shadow: 1px 1px rgba(255,255,255,0.3) ;
+#themeOptionBar {
+  right: 11.5rem;
 }
 
-#buttonFormatted {
-  margin-left: 0 ;
-  border-top-left-radius: 0 ;
-  border-bottom-left-radius: 0 ;
-}
-#buttonPlain {
-  margin-right: 0 ;
-  border-top-right-radius: 0 ;
-  border-bottom-right-radius: 0 ;
-  border-right: none ;
-}
+.optionBar {
+  user-select: none;
+  display: block;
+  position: absolute;
+  top: 0.7rem;
 
-#buttonFormatted:hover, #buttonPlain:hover {
-  -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.2);
-  background: #ebebeb -webkit-linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
-  border-color: #999;
-  color: #222;
-}
+  button {
+    border-radius: 0.1rem;
+    box-shadow: 0 0.05rem 0.2rem rgba(0, 0, 0, 0.1);
+    user-select: none;
+    background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
+    border: 1px solid #aaa;
+    color: #444;
+    font-size: 0.75rem;
+    margin-bottom: 0;
+    min-width: 4rem;
+    padding: 0.2rem 0;
+    position: relative;
+    z-index: 10;
+    display: inline-block;
+    width: 5rem;
+    text-shadow: 0.05rem 0.05rem rgba(255, 255, 255, 0.3);
 
-#buttonFormatted:active,
-#buttonPlain:active {
-  -webkit-box-shadow: inset 0px 1px 3px rgba(0, 0, 0, 0.2);
-  background: #ebebeb -webkit-linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
-  color: #333;
-}
+    &:last-child {
+      margin-left: 0;
+      border-top-left-radius: 0;
+      border-bottom-left-radius: 0;
+    }
 
-#buttonFormatted.selected,
-#buttonPlain.selected {
-  -webkit-box-shadow: inset 0px 1px 5px rgba(0, 0, 0, 0.2);
-  background: #ebebeb -webkit-linear-gradient(#e4e4e4, #dfdfdf 40%, #dcdcdc);
-  color: #333;
-}
+    &:first-child {
+      margin-right: 0;
+      border-top-right-radius: 0;
+      border-bottom-right-radius: 0;
+      border-right: none;
+    }
 
-#buttonFormatted:focus,
-#buttonPlain:focus {
-  outline: 0;
-}
+    &:hover {
+      box-shadow: 0 0.05rem 0.2rem rgba(0, 0, 0, 0.2);
+      background: #ebebeb linear-gradient(#fefefe, #f8f8f8 40%, #e9e9e9);
+      border-color: #999;
+      color: #222;
+    }
 
+    &:active {
+      box-shadow: inset 0 0.05rem 0.2rem rgba(0, 0, 0, 0.2);
+      background: #ebebeb linear-gradient(#f4f4f4, #efefef 40%, #dcdcdc);
+      color: #333;
+    }
+
+    &.selected {
+      box-shadow: inset 0 0.05rem 0.3rem rgba(0, 0, 0, 0.2);
+      background: #ebebeb linear-gradient(#e4e4e4, #dfdfdf 40%, #dcdcdc);
+      color: #333;
+    }
+
+    &:focus {
+      outline: 0;
+    }
+  }
+}
 
 #jsonpOpener,
 #jsonpCloser {
-  padding: 4px 0 0 8px ;
-  color: black ;
-  margin-bottom: -6px ;
+  padding: 0.25rem 0 0 0.5rem;
+  color: black;
+  margin-bottom: -0.4rem;
 }
 
 #jsonpCloser {
-  margin-top: 0 ;
+  margin-top: 0;
 }
 
 #formattedJson {
-  padding-left: 28px ;
-  padding-top: 6px ;
+  padding-left: 1.75rem;
+  padding-top: 0.4rem;
 }
+
 pre {
-  padding: 36px 5px 5px 5px ;
+  padding: 2.25rem 0.3rem 0.3rem;
 }
 
-
-.kvov {
-  display: block ;
-  padding-left: 20px ;
-  margin-left: -20px ;
-  position: relative ;
+.keyValueOrValue {
+  display: block;
+  padding-left: 1.25rem;
+  margin-left: -1.25rem;
+  position: relative;
 }
 
 .collapsed {
-  white-space: nowrap ;
-  &> .blockInner  {
-    display: none ; 
+  white-space: nowrap;
+
+  & > .blockInner {
+    display: none;
   }
-  &> .ell:after  {
-    content: "…" ; 
-    font-weight: bold ;
+
+  & > .ellipsis:after {
+    content: "…";
+    font-weight: bold;
   }
-  &> .ell {
-    margin: 0 4px ;
-    color: #888 ;
+
+  & > .ellipsis {
+    margin: 0 0.25rem;
+    color: #888;
   }
-  .kvov {
-    display: inline ;
+
+  .keyValueOrValue {
+    display: inline;
   }
 }
 
-.e {
-  width: 20px ;
-  height: 18px ;
-  display: block ;
-  position: absolute ;
-  left: -2px ;
-  top: 1px ;
-  z-index: 5 ;
-  background-image: url("data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAgAAAAICAYAAADED76LAAAAGXRFWHRTb2Z0d2FyZQBBZG9iZSBJbWFnZVJlYWR5ccllPAAAAD1JREFUeNpiYGBgOADE%2F3Hgw0DM4IRHgSsDFOzFInmMAQnY49ONzZRjDFiADT7dMLALiE8y4AGW6LoBAgwAuIkf%2F%2FB7O9sAAAAASUVORK5CYII%3D") ;
-  background-repeat: no-repeat ;
-  background-position: center center; 
-  display: block ;
-  opacity: 0.15 ;
-  // -webkit-transition: -webkit-transform 0.05s linear ;
+.expander {
+  display: block;
+  position: absolute;
+  width: 1.25rem;
+  height: 1.15rem;
+  left: 0.3rem;
+  font-size: 1.5rem;
+  z-index: 5;
+  opacity: 0.15;
+  cursor: pointer;
 
-  .collapsed > & {
-    -webkit-transform: rotate(-90deg) ;
-    width: 18px ;
-    height: 20px ;
-    
-    left: 0px ;
-    top: 0px ;
+  &:before {
+    display: block;
+    content: '▾';
+  }
+
+  .collapsed > &:before {
+    content: '▸';
   }
 
   &:hover {
-    opacity: 0.35 ;
+    opacity: 0.35;
   }
   &:active {
-    opacity: 0.5 ;
+    opacity: 0.5;
   }
 
   /* .e that are *inside* the children of a collapsed one */
-  .collapsed .kvov & {
-    display: none ;
+  .collapsed .keyValueOrValue & {
+    display: none;
   }
 }
 
 .blockInner {
-  display: block ;
-  padding-left: 24px ;
-  border-left: 1px dotted #bbb ;
-  margin-left: 2px ; 
+  display: block;
+  padding-left: 1.5rem;
+  border-left: 0.05rem dotted #bbb;
+  margin-left: 0.1rem;
 }
-
 
 /* SYNTAX HIGHLIGHTING */
 
-  #formattedJson, #jsonpOpener, #jsonpCloser {
-    color: #333 ;
-    font: 13px/18px monospace ;
-  }
+#formattedJson, #jsonpOpener, #jsonpCloser, pre {
+  font: 0.8rem/1.15rem monospace;
+}
 
-  #formattedJson {
-    color: #444 ;
-  }
-  .b /* Bracket/brace */ {
-    font-weight: bold ;
-  }
-  .s {
-    color: #0B7500 ;
-    word-wrap: break-word; 
-  }
-  a:link, a:visited {
-    text-decoration: none ;
-    color: inherit ;
-  }
-  a:hover, a:active {
-    text-decoration: underline ;
-    color: #050 ;
-  }
-  .bl, .nl, .n { /* bool, null, number */
-    font-weight: bold ;
-    color: #1A01CC ;
-  }
-  .k { /* key */
-    color: black ;
-  }
+.string {
+  word-wrap: break-word;
+}
+
+a:link, a:visited {
+  text-decoration: none;
+  color: inherit;
+}
+
+a:hover, a:active {
+  text-decoration: underline;
+  color: #050;
+}
 
 #formattingMsg {
-  font: 13px "Lucida Grande", "Segoe UI", "Tahoma" ;
-  padding: 10px 0 0 8px ;
-  margin: 0 ;
-  color: #333 ;
+  font: 0.8rem "Lucida Grande", "Segoe UI", "Tahoma";
+  padding: 0.6rem 0 0 0.5rem;
+  margin: 0;
 }
-  #formattingMsg > svg {
-    margin: 0 7px ;
-    position: relative ;
-    top: 1px ;
-  }
 
+#formattingMsg > svg {
+  margin: 0 0.45rem;
+  position: relative;
+  top: 0.05rem;
+}
 
 /* Misc */
 [hidden] {
-  display: none !important ;
+  display: none !important;
 }
+
 span {
-  white-space: pre-wrap ;
+  white-space: pre-wrap;
 }
 
 /* Spinner */
-@-webkit-keyframes spin {
+@keyframes spin {
   from {
-    -webkit-transform: rotate(0deg);
+    transform: rotate(0deg);
   }
   to {
-    -webkit-transform: rotate(360deg);
+    transform: rotate(360deg);
   }
 }
+
 #spinner {
-  -webkit-animation: spin 2s 0 infinite ;
+  animation: spin 2s infinite;
 }
 
 * {
-  -webkit-font-smoothing: antialiased;
+  font-smoothing: antialiased;
 }
