--- a/src/sass/content.scss
+++ b/src/sass/content.scss
@@ -1,5 +1,4 @@
 body {
-  font-size: 16px;
   user-select: text;
   overflow-y: scroll !important;
   margin: 0;
@@ -27,7 +26,7 @@ body {
     background: linear-gradient(#fafafa, #f4f4f4 40%, #e5e5e5);
     border: 1px solid #aaa;
     color: #444;
-    font-size: 0.75rem;
+    font-size: 12px;
     margin-bottom: 0;
     min-width: 4rem;
     padding: 0.2rem 0;
@@ -130,7 +129,7 @@ pre {
   width: 1.25rem;
   height: 1.15rem;
   left: 0.3rem;
-  font-size: 1.5rem;
+  font-size: 24px;
   z-index: 5;
   opacity: 0.15;
   cursor: pointer;
@@ -167,7 +166,7 @@ pre {
 /* SYNTAX HIGHLIGHTING */
 
 #formattedJson, #jsonpOpener, #jsonpCloser, pre {
-  font: 0.8rem/1.15rem monospace;
+  font: 13px/1.15rem monospace;
 }
 
 .string {
@@ -181,11 +180,10 @@ a:link, a:visited {
 
 a:hover, a:active {
   text-decoration: underline;
-  color: #050;
 }
 
 #formattingMsg {
-  font: 0.8rem "Lucida Grande", "Segoe UI", "Tahoma";
+  font: 13px "Lucida Grande", "Segoe UI", "Tahoma";
   padding: 0.6rem 0 0 0.5rem;
   margin: 0;
 }
