--- a/src/sass/themes/solarized-dark.scss
+++ b/src/sass/themes/solarized-dark.scss
@@ -1,6 +1,8 @@
+$foreground: #93a1a1;
+
 body {
   background-color: #002b36;
-  color: #93a1a1;
+  color: $foreground;
 }
 
 ::selection {
@@ -21,6 +23,10 @@ body {
 
 .bool, .null {
   color: #b58900;
+}
+
+.brace {
+  color: $foreground;
 }
 
 .collapsed:after {
