--- a/src/sass/themes/chrome.scss
+++ b/src/sass/themes/chrome.scss
@@ -1,6 +1,8 @@
+$foreground: black;
+
 body {
   background-color: white;
-  color: black;
+  color: $foreground;
 }
 
 ::selection {
@@ -21,6 +23,10 @@ body {
 
 .bool, .null {
   color: #6d79de;
+}
+
+.brace {
+  color: $foreground;
 }
 
 .collapsed:after {
