--- a/src/sass/themes/clouds-midnight.scss
+++ b/src/sass/themes/clouds-midnight.scss
@@ -1,10 +1,16 @@
+$foreground: #929292;
+
 body {
   background-color: #191919;
-  color: #929292;
+  color: $foreground;
 }
 
 ::selection {
   background-color: black;
+}
+
+.key {
+  color: $foreground;
 }
 
 .number {
@@ -17,6 +23,10 @@ body {
 
 .bool, .null {
   color: #39946a;
+}
+
+.brace {
+  color: $foreground;
 }
 
 .collapsed:after {
