--- a/src/sass/themes/gob.scss
+++ b/src/sass/themes/gob.scss
@@ -1,6 +1,8 @@
+$foreground: #0f0;
+
 body {
   background-color: #0b0b0b;
-  color: #0f0
+  color: $foreground;
 }
 
 ::selection {
@@ -12,11 +14,15 @@ body {
 }
 
 .string {
-  color: #10f060
+  color: #10f060;
 }
 
 .bool, .null {
-  color: #10f0a0
+  color: #10f0a0;
+}
+
+.brace {
+  color: $foreground;
 }
 
 .collapsed:after {
