--- a/src/sass/themes/idle-fingers.scss
+++ b/src/sass/themes/idle-fingers.scss
@@ -1,10 +1,16 @@
+$foreground: white;
+
 body {
   background-color: #323232;
-  color: #fff
+  color: $foreground;
 }
 
 ::selection {
   background-color: transparentize(#5a647e, 0.12);
+}
+
+.key {
+  color: $foreground;
 }
 
 .number, .bool, .null {
@@ -13,6 +19,10 @@ body {
 
 .string {
   color: #a5c261;
+}
+
+.brace {
+  color: $foreground;
 }
 
 .collapsed:after {
