--- a/src/sass/themes/kr-theme.scss
+++ b/src/sass/themes/kr-theme.scss
@@ -1,6 +1,8 @@
+$foreground: #fcffe0;
+
 body {
   background-color: #0b0a09;
-  color: #fcffe0;
+  color: $foreground;
 }
 
 ::selection {
@@ -17,6 +19,10 @@ body {
 
 .string {
   color: transparentize(#a4a1b5, 0.2);
+}
+
+.brace {
+  color: $foreground;
 }
 
 .collapsed:after {
