--- a/src/sass/themes/merbivore.scss
+++ b/src/sass/themes/merbivore.scss
@@ -1,10 +1,16 @@
+$foreground: #e6e1dc;
+
 body {
   background-color: #161616;
-  color: #e6e1dc;
+  color: $foreground;
 }
 
 ::selection {
   background-color: #454545;
+}
+
+.key {
+  color: $foreground;
 }
 
 .number {
@@ -17,6 +23,10 @@ body {
 
 .bool, .null {
   color: #fdc251;
+}
+
+.brace {
+  color: $foreground;
 }
 
 .collapsed:after {
