--- a/src/sass/themes/clouds-midnight.scss
+++ b/src/sass/themes/clouds-midnight.scss
@@ -29,6 +29,14 @@ body {
   color: $foreground;
 }
 
+#gutter {
+  background: #232323;
+}
+
+[line-number]:before {
+  color: $foreground;
+}
+
 .collapsed:after {
   color: #3c403b;
 }
