--- a/src/sass/themes/dreamweaver.scss
+++ b/src/sass/themes/dreamweaver.scss
@@ -29,6 +29,14 @@ body {
   color: $foreground;
 }
 
+#gutter {
+  background: #e8e8e8;
+}
+
+[line-number]:before {
+  color: #333;
+}
+
 .collapsed:after {
   color: #4c886b;
 }
