--- a/src/sass/themes/tomorrow-night.scss
+++ b/src/sass/themes/tomorrow-night.scss
@@ -25,6 +25,14 @@ body {
   color: $foreground;
 }
 
+#gutter {
+  background: #25282c;
+}
+
+[line-number]:before {
+  color: $foreground;
+}
+
 .collapsed:after {
   color: #969896;
 }
