--- a/src/sass/themes/vibrant-ink.scss
+++ b/src/sass/themes/vibrant-ink.scss
@@ -29,6 +29,14 @@ body {
   color: $foreground;
 }
 
+#gutter {
+  background: #1a1a1a;
+}
+
+[line-number]:before {
+  color: #bebebe;
+}
+
 .collapsed:after {
   color: #93c;
 }
